Fix mobile spacing.

--- a/app.css
+++ b/app.css
@@ -55,4 +55,8 @@ a:visited {
   .project {
     max-width: 320px;
   }
+  ul {
+    margin-top: 0;
+  }
+
 }
